--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "prettier": "^2.5.1",
     "typescript": "4.6.2"
   }
 }
