--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
@@ -21,6 +23,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "prettier": "^2.5.1",
+    "type-fest": "^2.12.0",
     "typescript": "4.6.2"
   }
 }
