--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,6 @@
   "extends": [
     "next/core-web-vitals",
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:@typescript-eslint/recommended"
   ]
 }
